DockerK8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 8080
